Configured User Image Fetch for Owner + User Recieved Messages

--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -2549,9 +2549,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Fug-eP-TlZ"/>
+        <segue reference="ucY-d9-ElJ"/>
         <segue reference="qA5-S4-8KW"/>
-        <segue reference="52p-Eh-xJV"/>
+        <segue reference="3NT-K1-ekO"/>
         <segue reference="3rb-88-5PJ"/>
     </inferredMetricsTieBreakers>
     <resources>
