FIXED: Repeat Cell Bug in Owner Messages. Bug was caused by toID not being chatPartnerID()

--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -1332,10 +1332,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="DdR-5S-yCs">
-                                <rect key="frame" x="0.0" y="56" width="414" height="758"/>
+                                <rect key="frame" x="0.0" y="56" width="414" height="610"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="DdR-5S-yCs" secondAttribute="height" multiplier="207:379" id="Awg-DT-IDU"/>
+                                    <constraint firstAttribute="width" secondItem="DdR-5S-yCs" secondAttribute="height" multiplier="207:305" id="oOm-Bb-CYu"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dPN-3b-ZcS">
                                     <size key="itemSize" width="128" height="128"/>
@@ -1383,12 +1383,13 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="DdR-5S-yCs" firstAttribute="leading" secondItem="6IT-N0-p70" secondAttribute="leading" id="4E9-sG-C1L"/>
-                            <constraint firstItem="DdR-5S-yCs" firstAttribute="trailing" secondItem="6IT-N0-p70" secondAttribute="trailing" id="BRC-b3-fWq"/>
                             <constraint firstItem="oIb-Ve-10O" firstAttribute="trailing" secondItem="6IT-N0-p70" secondAttribute="trailing" id="Cmm-Gb-SOL"/>
+                            <constraint firstItem="DdR-5S-yCs" firstAttribute="top" secondItem="6IT-N0-p70" secondAttribute="top" id="aWl-Bz-AUg"/>
+                            <constraint firstItem="DdR-5S-yCs" firstAttribute="leading" secondItem="6IT-N0-p70" secondAttribute="leading" id="bRG-3I-1Pd"/>
+                            <constraint firstItem="DdR-5S-yCs" firstAttribute="trailing" secondItem="6IT-N0-p70" secondAttribute="trailing" id="cnK-4F-oA4"/>
                             <constraint firstAttribute="bottom" secondItem="oIb-Ve-10O" secondAttribute="bottom" id="dez-7E-deT"/>
+                            <constraint firstItem="6IT-N0-p70" firstAttribute="bottom" secondItem="DdR-5S-yCs" secondAttribute="bottom" constant="93" id="fY8-2D-8k0"/>
                             <constraint firstItem="oIb-Ve-10O" firstAttribute="leading" secondItem="6IT-N0-p70" secondAttribute="leading" id="hbW-eC-6t5"/>
-                            <constraint firstItem="DdR-5S-yCs" firstAttribute="top" secondItem="6IT-N0-p70" secondAttribute="top" id="jnw-Oy-ciB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6IT-N0-p70"/>
                     </view>
@@ -1400,7 +1401,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Plb-7m-LrO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1712" y="2301"/>
+            <point key="canvasLocation" x="1711.5942028985507" y="2300.8928571428569"/>
         </scene>
         <!--Messages-->
         <scene sceneID="Cu6-AR-eZE">
@@ -2333,10 +2334,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7OM-kI-kAc">
-                                <rect key="frame" x="0.0" y="56" width="414" height="758"/>
+                                <rect key="frame" x="0.0" y="56" width="414" height="637"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="7OM-kI-kAc" secondAttribute="height" multiplier="207:379" id="0Wj-Hh-AM0"/>
+                                    <constraint firstAttribute="width" secondItem="7OM-kI-kAc" secondAttribute="height" multiplier="414:637" id="zVU-4N-bM4"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PMU-5Q-NhK">
                                     <size key="itemSize" width="128" height="128"/>
@@ -2386,10 +2387,11 @@
                         <constraints>
                             <constraint firstItem="ya6-ZC-Bsh" firstAttribute="trailing" secondItem="G9c-bI-fZG" secondAttribute="trailing" id="20g-Kl-dld"/>
                             <constraint firstItem="ya6-ZC-Bsh" firstAttribute="leading" secondItem="G9c-bI-fZG" secondAttribute="leading" id="8Az-lD-Nlw"/>
-                            <constraint firstItem="7OM-kI-kAc" firstAttribute="top" secondItem="G9c-bI-fZG" secondAttribute="top" id="fX3-fh-Kuk"/>
+                            <constraint firstItem="7OM-kI-kAc" firstAttribute="trailing" secondItem="G9c-bI-fZG" secondAttribute="trailing" id="LD9-YF-Cgg"/>
+                            <constraint firstItem="G9c-bI-fZG" firstAttribute="bottom" secondItem="7OM-kI-kAc" secondAttribute="bottom" constant="66" id="NRr-57-X74"/>
+                            <constraint firstItem="7OM-kI-kAc" firstAttribute="leading" secondItem="G9c-bI-fZG" secondAttribute="leading" id="ilg-XJ-839"/>
                             <constraint firstAttribute="bottom" secondItem="ya6-ZC-Bsh" secondAttribute="bottom" constant="60" id="mpM-9i-DqI"/>
-                            <constraint firstItem="7OM-kI-kAc" firstAttribute="leading" secondItem="G9c-bI-fZG" secondAttribute="leading" id="w62-Li-CGC"/>
-                            <constraint firstItem="7OM-kI-kAc" firstAttribute="trailing" secondItem="G9c-bI-fZG" secondAttribute="trailing" id="zPe-j8-xke"/>
+                            <constraint firstItem="7OM-kI-kAc" firstAttribute="top" secondItem="G9c-bI-fZG" secondAttribute="top" id="tN0-BL-H8J"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="G9c-bI-fZG"/>
                     </view>
@@ -2401,7 +2403,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mE6-xg-rsf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3077" y="-1637"/>
+            <point key="canvasLocation" x="3076.811594202899" y="-1637.2767857142856"/>
         </scene>
         <!--Owner Appointment History Detail View Controller-->
         <scene sceneID="ezm-Yg-jSs">
