--- a/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
+++ b/Boatell-v3/Boatell-v3/Base.lproj/Main.storyboard
@@ -1062,6 +1062,16 @@
                                     <segue destination="rKU-eP-d1U" kind="unwind" unwindAction="unwindToServices:" id="oOv-Zk-3db"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDN-kL-SWD">
+                                <rect key="frame" x="150" y="681" width="117" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="STRIPE TEST">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="S1c-rL-Sjq" kind="show" id="M7D-iB-MHZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -1073,8 +1083,10 @@
                             <constraint firstItem="eXw-Nl-7CH" firstAttribute="trailing" secondItem="CGy-mf-C5n" secondAttribute="trailing" constant="125" id="9gm-uz-xLE"/>
                             <constraint firstItem="Egh-3x-wCM" firstAttribute="leading" secondItem="eXw-Nl-7CH" secondAttribute="leading" constant="20" id="9hq-gY-0HP"/>
                             <constraint firstItem="Egh-3x-wCM" firstAttribute="top" secondItem="8aF-UA-nbs" secondAttribute="bottom" constant="100" id="Mbh-x0-m4o"/>
+                            <constraint firstItem="EDN-kL-SWD" firstAttribute="leading" secondItem="eXw-Nl-7CH" secondAttribute="leading" constant="150" id="PnT-E1-0z4"/>
                             <constraint firstItem="CGy-mf-C5n" firstAttribute="width" secondItem="CGy-mf-C5n" secondAttribute="height" multiplier="164:63" id="Puy-fq-sgr"/>
                             <constraint firstAttribute="bottom" secondItem="Nrv-mB-aJv" secondAttribute="bottom" id="SCA-T9-mM1"/>
+                            <constraint firstItem="EDN-kL-SWD" firstAttribute="top" secondItem="Egh-3x-wCM" secondAttribute="bottom" constant="46" id="aBX-0f-t4p"/>
                             <constraint firstItem="Nrv-mB-aJv" firstAttribute="top" secondItem="KNM-iy-FWS" secondAttribute="top" id="aVI-t5-Qks"/>
                             <constraint firstItem="Foj-Zu-xq7" firstAttribute="leading" secondItem="eXw-Nl-7CH" secondAttribute="leading" constant="20" id="bS2-8n-Uec"/>
                             <constraint firstItem="8aF-UA-nbs" firstAttribute="top" secondItem="eXw-Nl-7CH" secondAttribute="top" constant="49" id="jEG-J6-bkT"/>
@@ -1082,6 +1094,7 @@
                             <constraint firstItem="eXw-Nl-7CH" firstAttribute="trailing" secondItem="8aF-UA-nbs" secondAttribute="trailing" constant="20" id="pwM-Ws-zf6"/>
                             <constraint firstItem="CGy-mf-C5n" firstAttribute="width" secondItem="CGy-mf-C5n" secondAttribute="height" multiplier="164:63" id="qlr-0g-WIh"/>
                             <constraint firstItem="Foj-Zu-xq7" firstAttribute="top" secondItem="eXw-Nl-7CH" secondAttribute="top" constant="34" id="qvj-BX-kSC"/>
+                            <constraint firstItem="eXw-Nl-7CH" firstAttribute="trailing" secondItem="EDN-kL-SWD" secondAttribute="trailing" constant="147" id="zC4-QQ-vfm"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="eXw-Nl-7CH"/>
                     </view>
@@ -1101,6 +1114,41 @@
                 <exit id="rKU-eP-d1U" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="3743" y="110"/>
+        </scene>
+        <!--Browse Products View Controller-->
+        <scene sceneID="1Dr-EM-P9o">
+            <objects>
+                <collectionViewController modalPresentationStyle="fullScreen" id="S1c-rL-Sjq" customClass="BrowseProductsViewController" customModule="Boatell_v3" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="sJg-9M-iVa">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JHh-T2-0du">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="12U-dh-C0T">
+                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="u1J-S8-3QT">
+                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </collectionViewCellContentView>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="S1c-rL-Sjq" id="eti-Cq-i0v"/>
+                            <outlet property="delegate" destination="S1c-rL-Sjq" id="8SQ-fX-Vx0"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="CK9-zO-n63"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rSn-y0-6Q9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4609" y="123"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="LRL-0X-Ncm">
